packages/cogentlm-rs/crates/cogentlm-sys/src/bindings_fallback.rs


    pub fn cogent_chat_templates_init(
        model: *const llama_model,
        chat_template_override: *const c_char,
    ) -> *mut cogent_chat_templates;
    pub fn cogent_chat_templates_free(templates: *mut cogent_chat_templates);
    pub fn cogent_chat_templates_source(templates: *const cogent_chat_templates) -> *mut c_char;
    pub fn cogent_apply_chat_template(
        templates: *const cogent_chat_templates,
        messages_json: *const c_char,
        add_assistant: bool,
    ) -> *mut c_char;
    pub fn cogent_free_string(value: *mut c_char);
    pub fn cogent_free_buffer(value: *mut c_void);
    pub fn cogent_common_params_parse_server(
        model_path: *const c_char,
        argc: i32,
        argv: *const *const c_char,
        error_out: *mut *mut c_char,
    ) -> *mut cogent_common_params;
    pub fn cogent_common_params_free(params: *mut cogent_common_params);
    pub fn cogent_common_init_from_params(
        params: *const cogent_common_params,
        error_out: *mut *mut c_char,
    ) -> *mut cogent_common_init;
    pub fn cogent_common_init_free(init: *mut cogent_common_init);
    pub fn cogent_common_init_model(init: *mut cogent_common_init) -> *mut llama_model;
    pub fn cogent_common_init_context(init: *mut cogent_common_init) -> *mut llama_context;
    pub fn cogent_common_init_vocab(init: *mut cogent_common_init) -> *const llama_vocab;
    pub fn cogent_common_init_n_parallel(init: *const cogent_common_init) -> i32;
    pub fn cogent_common_init_n_batch(init: *const cogent_common_init) -> i32;
    pub fn cogent_common_init_n_ubatch(init: *const cogent_common_init) -> i32;
    pub fn cogent_common_init_n_ctx(init: *const cogent_common_init) -> i32;
    pub fn cogent_common_init_n_embd_out(init: *const cogent_common_init) -> i32;
    pub fn cogent_common_init_pooling_type(init: *const cogent_common_init) -> i32;
    pub fn cogent_common_init_decoder_start_token(init: *const cogent_common_init) -> i32;
    pub fn cogent_common_init_model_has_encoder(init: *const cogent_common_init) -> bool;
    pub fn cogent_common_init_model_has_decoder(init: *const cogent_common_init) -> bool;
    pub fn cogent_common_init_model_has_chat_template(init: *const cogent_common_init) -> bool;
    pub fn cogent_common_init_kv_unified(init: *const cogent_common_init) -> bool;
    pub fn cogent_common_init_flash_attention(init: *const cogent_common_init) -> *mut c_char;
    pub fn cogent_common_init_cache_type_k(init: *const cogent_common_init) -> *mut c_char;
    pub fn cogent_common_init_cache_type_v(init: *const cogent_common_init) -> *mut c_char;
    pub fn cogent_common_sampler_init_from_json(
        init: *mut cogent_common_init,
        sampling_json: *const c_char,
        grammar: *const c_char,
        json_schema: *const c_char,
        error_out: *mut *mut c_char,
    ) -> *mut cogent_common_sampler;
    pub fn cogent_common_sampler_free(sampler: *mut cogent_common_sampler);
    pub fn cogent_common_sampler_raw(sampler: *mut cogent_common_sampler) -> *mut llama_sampler;
    pub fn cogent_common_sampler_backend_sampling(sampler: *const cogent_common_sampler) -> bool;
    pub fn cogent_common_sampler_print(sampler: *const cogent_common_sampler) -> *mut c_char;
    pub fn cogent_common_sampler_sample(
        sampler: *mut cogent_common_sampler,
        context: *mut llama_context,
        idx: c_int,
    ) -> llama_token;
    pub fn cogent_common_sampler_accept(
        sampler: *mut cogent_common_sampler,
        token: llama_token,
        is_generated: bool,
    ) -> bool;
    pub fn cogent_llama_state_seq_get_data_ext_alloc(
        context: *mut llama_context,
        seq_id: llama_seq_id,
        flags: u32,
        data_out: *mut *mut u8,
        size_out: *mut usize,
    ) -> bool;
    pub fn cogent_llama_state_seq_set_data_ext(
        context: *mut llama_context,
        seq_id: llama_seq_id,
        flags: u32,
        data: *const u8,
        size: usize,
    ) -> bool;
    pub fn cogent_common_checkpoint_capture(
        context: *mut llama_context,
        seq_id: llama_seq_id,
        flags: u32,
        error_out: *mut *mut c_char,
    ) -> *mut cogent_common_checkpoint;
    pub fn cogent_common_checkpoint_restore(
        checkpoint: *const cogent_common_checkpoint,
        context: *mut llama_context,
        seq_id: llama_seq_id,
        flags: u32,
        error_out: *mut *mut c_char,
    ) -> bool;
    pub fn cogent_common_checkpoint_size(checkpoint: *const cogent_common_checkpoint) -> usize;
    pub fn cogent_common_checkpoint_free(checkpoint: *mut cogent_common_checkpoint);
    pub fn cogent_set_llama_log_quiet(quiet: bool);
    pub fn cogent_backend_load_all();
    pub fn cogent_backend_observability_json(include_details: bool) -> *mut c_char;
    pub fn cogent_llama_set_sampler(
        context: *mut llama_context,
        seq_id: llama_seq_id,
        sampler: *mut llama_sampler,
    ) -> bool;
    pub fn cogent_llama_decode(context: *mut llama_context, batch: *const llama_batch) -> c_int;
    pub fn cogent_llama_encode(context: *mut llama_context, batch: *const llama_batch) -> c_int;
    pub fn cogent_llama_embeddings_seq(
        context: *mut llama_context,
        seq_id: llama_seq_id,
    ) -> *const c_float;
    pub fn cogent_llama_embeddings_ith(
        context: *mut llama_context,
        i: c_int,
    ) -> *const c_float;
    pub fn cogent_llama_synchronize(context: *mut llama_context) -> bool;
    pub fn cogent_llama_sampler_sample(
        sampler: *mut llama_sampler,
        context: *mut llama_context,
        idx: c_int,
    ) -> llama_token;
    pub fn cogent_llama_sampler_accept(sampler: *mut llama_sampler, token: llama_token) -> bool;
    pub fn cogent_mtmd_default_marker() -> *const c_char;
    pub fn cogent_mtmd_init_from_file(
        mmproj_path: *const c_char,
        text_model: *const llama_model,
        use_gpu: bool,
        n_threads: c_int,
    ) -> *mut cogent_mtmd_context;
    pub fn cogent_mtmd_free(context: *mut cogent_mtmd_context);
    pub fn cogent_mtmd_support_vision(context: *const cogent_mtmd_context) -> bool;
    pub fn cogent_mtmd_bitmap_init_from_buf(
        context: *mut cogent_mtmd_context,
        data: *const u8,
        len: usize,
    ) -> *mut cogent_mtmd_bitmap;
    pub fn cogent_mtmd_bitmap_free(bitmap: *mut cogent_mtmd_bitmap);
    pub fn cogent_mtmd_input_chunks_init() -> *mut cogent_mtmd_input_chunks;
    pub fn cogent_mtmd_input_chunks_free(chunks: *mut cogent_mtmd_input_chunks);
    pub fn cogent_mtmd_tokenize(
        context: *mut cogent_mtmd_context,
        chunks: *mut cogent_mtmd_input_chunks,
        text: *const c_char,
        add_special: bool,
        parse_special: bool,
        bitmaps: *const *const cogent_mtmd_bitmap,
        bitmap_count: usize,
    ) -> bool;
    pub fn cogent_mtmd_eval_chunks(
        context: *mut cogent_mtmd_context,
        llama_context: *mut llama_context,
        chunks: *const cogent_mtmd_input_chunks,
        n_past: i32,
        seq_id: i32,
        n_batch: i32,
        logits_last: bool,
        new_n_past: *mut i32,
    ) -> i32;
}
